--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "media-player",
   "version": "1.0.0",
   "description": "A media player pluggin for the web",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
