--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "media-player",
   "version": "1.0.0",
-  "description": "A media player pluggin for the web",
+  "description": "A media player plugin for the web",
   "main": "index.js",
   "scripts": {
     "start": "live-server",
