--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "media-player",
-  "version": "1.0.0",
-  "description": "A media player plugin for the web",
-  "main": "index.js",
-  "scripts": {
-    "start": "live-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "js",
-    "vanilla",
-    "js",
-    "web",
-    "video",
-    "pluggin"
-  ],
-  "author": "Javier Chávez",
-  "license": "ISC",
-  "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+    "name": "media-player",
+    "version": "1.0.0",
+    "description": "A media player plugin for the web",
+    "main": "index.js",
+    "scripts": {
+        "start": "live-server",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+        "js",
+        "vanilla",
+        "js",
+        "web",
+        "video",
+        "pluggin"
+    ],
+    "author": "Javier Chávez",
+    "license": "ISC",
+    "devDependencies": {
+        "parcel-bundler": "^1.12.4"
+    }
 }
