--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A media player plugin for the web",
     "main": "index.js",
     "scripts": {
-        "start": "live-server",
+        "start": "parcel index.html ejercicios/index.html ejercicios/**/*html",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [
@@ -19,5 +19,10 @@
     "license": "ISC",
     "devDependencies": {
         "parcel-bundler": "^1.12.4"
-    }
+    },
+    "browserslist": [
+        "defaults",
+        "not IE 11",
+        "maintained node versions"
+    ]
 }
