--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "parcel index.html exercises/index.html exercises/**/*.html",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "cleanup": "rm -rf .cache dist"
     },
     "keywords": [
         "js",
@@ -18,12 +19,17 @@
     "author": "Javier Chávez",
     "license": "ISC",
     "devDependencies": {
-        "parcel-bundler": "^1.12.4",
-        "typescript": "^4.1.3"
+        "@parcel/validator-typescript": "^2.0.0-alpha.3",
+        "parcel-bundler": "^1.12.4"
     },
     "browserslist": [
         "defaults",
         "not IE 11",
         "maintained node versions"
-    ]
+    ],
+    "validators": {
+        "*.ts": [
+            "@parcel/validator-typescript"
+        ]
+    }
 }
