--- a/package.json
+++ b/package.json
@@ -19,17 +19,11 @@
     "author": "Javier Chávez",
     "license": "ISC",
     "devDependencies": {
-        "@parcel/validator-typescript": "^2.0.0-alpha.3",
-        "parcel-bundler": "^1.12.4"
+        "typescript": "^4.1.3"
     },
     "browserslist": [
         "defaults",
         "not IE 11",
         "maintained node versions"
-    ],
-    "validators": {
-        "*.ts": [
-            "@parcel/validator-typescript"
-        ]
-    }
+    ]
 }
